Fixed overflow in histogram titles

--- a/style/pivotviewer.css
+++ b/style/pivotviewer.css
@@ -2,7 +2,7 @@
 .pv-wrapper { border: 1px solid #D3D4D4; background:#F5F7F9; font-family: 'Segoe UI', Tahoma, Arial, Helvetica, Sans-Serif; font-size:8pt; font-weight:normal; -webkit-tap-highlight-color: rgba(0,0,0,0); }
 .pv-loading { width:89px; height:66px; font-family: Tahoma, Sans-Serif; position:absolute; }
 .pv-loading span { position: absolute; top:66px; left:23px; }
-.pv-toolbarpanel { height: 22px; width: 100%; border-bottom: 1px solid #D3D4D4; padding: 3px 0px 3px 0px; background: #FDFDFD; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FDFDFD', endColorstr='#F4F4F4');  background: -webkit-gradient(linear, left top, left bottom, from(#FDFDFD), to(#F4F4F4));  background: -moz-linear-gradient(top,  #FDFDFD,  #F4F4F4); }
+.pv-toolbarpanel { height: 22px; width: 100%; border-bottom: 1px solid #D3D4D4; padding: 3px 0px 3px 0px; background: #FDFDFD; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FDFDFD', endColorstr='#F4F4F4');  background: -webkit-gradient(linear, left top, left bottom, from(#FDFDFD), to(#F4F4F4));  background: -moz-linear-gradient(top,  #FDFDFD,  #F4F4F4); white-space:nowrap}
 .pv-toolbarpanel-brandimage { height: 22px; float:left; }
 .pv-toolbarpanel-facetbreadcrumb { margin-top:5px; margin-left:5px; float:left; white-space: nowrap; overflow: hidden; text-overflow:ellipsis}
 .pv-toolbarpanel-facetbreadcrumb-facet { margin-left: 5px; color:#787676; }
@@ -109,7 +109,7 @@
 .pv-viewarea-graphview { position: absolute; top:0px; left:0px; z-index: 2; }
 .pv-viewarea-graphview-overlay { position: absolute; top: 0px; width: 100%; height: 100%; z-index: 1; }
 .pv-viewarea-graphview-overlay-bucket { height: 100%; position:absolute; top:0px;}
-.pv-viewarea-graphview-overlay-buckettitle { height: 50px; background-color:#F5F5F5; position: relative; text-align:center; border: 1px solid #D3D4D4; cursor: default; }
+.pv-viewarea-graphview-overlay-buckettitle { height: 50px; background-color:#F5F5F5; position: relative; text-align:center; border: 1px solid #D3D4D4; cursor: default; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;z-index: 25;}
 .graphview-bucket-dark { background-color: #E6E8ED; }
 .graphview-bucket-light { background-color: #EBEDF1; }
 .graphview-bucket-hover { background-color: #DCECF4; }
